Addition of article, and login pages and then update the home page process

--- a/index.html
+++ b/index.html
@@ -14,16 +14,17 @@
 
     <header class="header">
         <nav class="header__nav">
-            <a href="#" class="header__nav--item">Home</a>
-            <a href="#" class="header__nav--item">About</a>
-            <a href="#" class="header__nav--item">Experience</a>
-            <a href="#" class="header__nav--item">Projects</a>
-            <a href="#" class="header__nav--item">Contact</a>
-            <a href="#" class="header__nav--item">Articles</a>
+            <a href="./index.html" class="header__nav--item btn">Home</a>
+            <a href="#" class="header__nav--item btn">About</a>
+            <a href="#" class="header__nav--item btn">Experience</a>
+            <a href="#" class="header__nav--item btn">Projects</a>
+            <a href="#" class="header__nav--item btn">Contact</a>
+            <a href="./articles.html" class="header__nav--item btn">Articles</a>
+            <a href="./login.html" class="header__nav--item btn btn__login">Login</a>
         </nav>
         <div class="header__intro">
             <h5 class="primary--header">
-                Hi, I'm ASIFIWE Emmanuel. A great web developer.
+                <span>Hi, I'm ASIFIWE Emmanuel.</span> A great web developer.
             </h5>
         </div>
 
@@ -31,6 +32,209 @@
             <img src="./dist/img/profile-picture.jpg" alt="Profile picture" class="header__profile--img">
         </div>
     </header>
+
+    <section class="info-section">
+        <div class="sec-container">
+            <div class="left-div">
+                <h6 class="primary--header">Who am I ?</h6>
+                <p class="primary--text">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Sit cursus turpis
+                    parturient vitae diam. Mauris, aliquet integer egestas orci habitant enim
+                    phasellus amet. Neque etiam nulla venenatis, egestas. Duis etiam porta id
+                    pharetra vulputate viverra diam. Quis gravida pellentesque interdum
+                    euismod cursus tellus. Sit diam dignissim ut pulvinar sed velit accumsan.
+                </p>
+                <a href="#" class="btn btn__primary">Read more</a>
+            </div>
+            <div class="right-div">
+                <div class="info-req__container">
+                    <p class="info-text">
+                        <span>Rwanda</span>
+                        <span>/</span>
+                        <span>Kigali</span>
+                    </p>
+                    <p class="info-text">
+                        <span>Niboyi</span>
+                        <span>/</span>
+                        <span>Gatare</span>
+                    </p>
+                    <p class="info-text">
+                        Kigali kk 382 ST 11
+                    </p>
+                    <p class="info-text">
+                        emmanuel2koestner@gmail.com
+                    </p>
+                    <div class="info__social-media">
+                        <a href="#" class="info__social-media--item">
+                            <img src="./dist/img/linkedin.svg" alt="linkedin" class="info__social-media--img">
+                        </a>
+                        <a href="#" class="info__social-media--item">
+                            <img src="./dist/img/github.svg" alt="github" class="info__social-media--img">
+                        </a>
+                        <a href="#" class="info__social-media--item">
+                            <img src="./dist/img/facebook.svg" alt="facebook" class="info__social-media--img">
+                        </a>
+                        <a href="#" class="info__social-media--item">
+                            <img src="./dist/img/instagram.svg" alt="instagram" class="info__social-media--img">
+                        </a>
+                        <a href="#" class="info__social-media--item">
+                            <img src="./dist/img/twitter.svg" alt="twitter" class="info__social-media--img">
+                        </a>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </section>
+    <section class="experience-sec">
+        <div class="sec-container">
+            <h5 class="primary--header">Experience</h5>
+            <div class="experience-sec__list">
+                <button class="btn experience-sec__list--item active" id="experience-1">RBA intern</button>
+                <button class="btn experience-sec__list--item" id="experience-2">School's experience</button>
+                <button class="btn experience-sec__list--item" id="experience-3">Andela ATLP</button>
+            </div>
+            <div class="experience-1">
+                <p class="primary--text experience-1__text">
+                    Lorem ipsum dolor sit amet, consectetur adipiscing elit. Sit cursus turpis
+                    parturient vitae diam. Mauris, aliquet integer egestas orci habitant enim
+                    phasellus amet. Neque etiam nulla venenatis, egestas. Duis etiam porta id
+                    pharetra vulputate viverra diam. Quis gravida pellentesque interdum
+                    euismod cursus tellus. Sit diam dignissim ut pulvinar sed velit accumsan.
+                </p>
+                <a href="#" class="btn btn__primary">Click to see certificate</a>
+            </div>
+
+        </div>
+    </section>
+
+    <section class="projects-sec">
+        <div class="sec-container">
+            <h5 class="primary--header">Projects</h5>
+            <div class="cards">
+                <div class="card">
+                    <img src="./dist/img/image-1.jpg" alt="Card image" class="card--img">
+                    <p class="primary--text">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Sit
+                        cursus turpis parturient vitae diam. 
+                    </p>
+                    <button class="btn btn__primary">Read more</button>
+                </div>
+                <div class="card">
+                    <img src="./dist/img/image-1.jpg" alt="Card image" class="card--img">
+                    <p class="primary--text">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Sit
+                        cursus turpis parturient vitae diam. 
+                    </p>
+                    <button class="btn btn__primary">Read more</button>
+                </div>
+                <div class="card">
+                    <img src="./dist/img/image-1.jpg" alt="Card image" class="card--img">
+                    <p class="primary--text">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Sit
+                        cursus turpis parturient vitae diam. 
+                    </p>
+                    <button class="btn btn__primary">Read more</button>
+                </div>
+            </div>
+        </div>
+    </section>
+
+    <section class="contact-sec">
+        <div class="sec-container">
+            <h5 class="primary--header"> Contact us</h5>
+            <div class="left-div">
+                <h6 class="secondary--header">The reasons to contact us</h6>
+                <p class="primary--text">
+                    Lorem ipsum dolor sit amet, consectetur adipiscing elit. Sit
+                    cursus turpis parturient vitae diam. Mauris, aliquet integer
+                    egestas orci habitant enim phasellus amet. Neque etiam nulla
+                    venenatis, egestas. Duis etiam porta id pharetra vulputate
+                    viverra diam. Quis gravida pellentesque interdum euismod
+                    cursus tellus. Sit diam dignissim ut pulvinar sed velit
+                    accumsan.
+                </p>
+            </div>
+            <div class="right-div">
+                <form class="form">
+                    <div class="form-group">
+                        <label for="name" class="form-group__label">Your name</label>
+                        <input type="text" name="name" id="name" class="form-group__input">
+                    </div>
+                    <div class="form-group">
+                        <label for="email" class="form-group__label">Your email</label>
+                        <input type="email" name="email" id="email" class="form-group__input">
+                    </div>
+                    <div class="form-group message">
+                        <label for="message" class="form-group__label">Your message</label>
+                        <textarea name="message" id="message" cols="20" rows="5" class="form-group__textarea"></textarea>
+                    </div>
+
+                    <button class="btn btn__primary">Send your message</button>
+                </form>
+            </div>
+        </div>
+    </section>
+
+    <footer class="footer">
+        <div class="sec-container">
+            <div class="footer__contents">
+                <div class="footer__nav">
+                    <a href="#" class="footer__nav--item">Home</a>
+                    <a href="#" class="footer__nav--item">About</a>
+                    <a href="#" class="footer__nav--item">Experience</a>
+                    <a href="#" class="footer__nav--item">Projects</a>
+                    <a href="#" class="footer__nav--item">Contact</a>
+                    <a href="#" class="footer__nav--item">Articles</a>
+                </div>
+                <div class="footer__navigation-link">
+                    <p class="primary--text">
+                        I, ASIFIWE Emmanuel provides
+                        articles to what I am current doing
+                        especially beneficial projects to the
+                        society, and personal improvement.
+                    </p>
+                    <p class="primary--text">
+                        Click the last item on the left list
+                        called Articles to access who am I.
+                    </p>
+                </div>
+                <div class="footer__reasons">
+                    <h6 class="secondary--header">The reasons to believe in us.</h6>
+                    <p class="primary--text">
+                        Using online platform, we have acquired
+                        necessary skills for helping our clients.
+                    </p>
+                    <p class="primary--text">
+                        Certificates were provided as proof of
+                        completion of those courses. Curious right?.
+                        Click the button below to access different
+                        courses and their certificates.
+                    </p>
+
+                    <div class="btn btn__primary">Learn More</div>
+                </div>
+            </div>
+            <div class="footer__footer">
+                <p class="info-text">We are here for you. don't hesitate to contact me. <span>&#8594;</span></p>
+                <div class="social-contact">
+                    <a href="#" class="btn btn__white">Contact me</a>
+                    <div class="info__social-media">
+                        <a href="#" class="info__social-media--item">
+                            <img src="./dist/img/linkedin.svg" alt="linkedin" class="info__social-media--img">
+                        </a>
+                        <a href="#" class="info__social-media--item">
+                            <img src="./dist/img/github.svg" alt="github" class="info__social-media--img">
+                        </a>
+                        <a href="#" class="info__social-media--item">
+                            <img src="./dist/img/facebook.svg" alt="facebook" class="info__social-media--img">
+                        </a>
+                        <a href="#" class="info__social-media--item">
+                            <img src="./dist/img/instagram.svg" alt="instagram" class="info__social-media--img">
+                        </a>
+                        <a href="#" class="info__social-media--item">
+                            <img src="./dist/img/twitter.svg" alt="twitter" class="info__social-media--img">
+                        </a>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </footer>
     
 </body>
 </html>
