--- a/index.html
+++ b/index.html
@@ -14,17 +14,23 @@
 
     <header class="header">
         <nav class="header__nav">
-            <a href="./index.html" class="header__nav--item btn">Home</a>
-            <a href="#" class="header__nav--item btn">About</a>
-            <a href="#" class="header__nav--item btn">Experience</a>
-            <a href="#" class="header__nav--item btn">Projects</a>
-            <a href="#" class="header__nav--item btn">Contact</a>
-            <a href="./articles.html" class="header__nav--item btn">Articles</a>
+            <div class="header__nav--container">
+                <a href="./index.html" class="header__nav--item btn">Home</a>
+                <a href="#" class="header__nav--item btn">About</a>
+                <a href="#" class="header__nav--item btn">Experience</a>
+                <a href="#" class="header__nav--item btn">Projects</a>
+                <a href="#" class="header__nav--item btn">Contact</a>
+                <a href="./articles.html" class="header__nav--item btn">Articles</a>
+            </div>
+            <button class="btn" id="btn-deactive">
+                <img src="./dist/img/bars.svg" alt="">
+            </button>
             <a href="./login.html" class="header__nav--item btn btn__login">Login</a>
         </nav>
         <div class="header__intro">
             <h5 class="primary--header">
                 <span>Hi, I'm ASIFIWE Emmanuel.</span> A great web developer.
+
             </h5>
         </div>
 
@@ -143,11 +149,7 @@
                 <p class="primary--text">
                     Lorem ipsum dolor sit amet, consectetur adipiscing elit. Sit
                     cursus turpis parturient vitae diam. Mauris, aliquet integer
-                    egestas orci habitant enim phasellus amet. Neque etiam nulla
-                    venenatis, egestas. Duis etiam porta id pharetra vulputate
-                    viverra diam. Quis gravida pellentesque interdum euismod
-                    cursus tellus. Sit diam dignissim ut pulvinar sed velit
-                    accumsan.
+                    egestas orci habitant enim phasellus amet.
                 </p>
             </div>
             <div class="right-div">
@@ -172,7 +174,7 @@
     </section>
 
     <footer class="footer">
-        <div class="sec-container">
+        <div class="sec-containerss">
             <div class="footer__contents">
                 <div class="footer__nav">
                     <a href="#" class="footer__nav--item">Home</a>
@@ -236,5 +238,7 @@
         </div>
     </footer>
     
+
+    <script src="./dist/js/main.js"></script>
 </body>
 </html>
