additional of other pages to complete dashboard for user

--- a/dashboard.html
+++ b/dashboard.html
@@ -45,75 +45,122 @@
         <div class="dashboard--container">
             <div class="dashboard-type">
                 <a href="#" class="btn btn__primary btn__create">Edit your profile</a>
-                <a href="#" class="btn btn__primary btn__outline">articles</a>
+                <a href="#" class="btn btn__primary btn__outline">Articles</a>
+                <a href="#" class="btn btn__primary btn__create">Queries</a>
+                <a href="#" class="btn btn__primary btn__create">Experiences</a>
+                <a href="#" class="btn btn__primary btn__create">Projects</a>
+                <a href="#" class="btn btn__primary btn__create left-corner">articles</a>
             </div>
-            <div class="cards">
-                <div class="card">
+            <div class="cards" id="dashboard-cards">
+                <div class="card" id="dashboard-card">
                     <img src="./dist/img/image-1.jpg" alt="Card image" class="card--img">
                     <p class="primary--text">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Sit
                         cursus turpis parturient vitae diam. 
                     </p>
                     <div class="btn-types">
-                        <a href="#" class="btn btn__read">Read</a>
-                        <a href="#" class="btn btn__edit">Edit</a>
-                        <a href="#" class="btn btn__delete">Delete</a>
+                        <a href="./articles.html" class="btn btn__read">Read</a>
+                        <a href="./dashboard-edit-article.html" class="btn btn__edit">Edit</a>
+                        <button class="btn btn__delete">Delete</button>
+                    </div>
+                    <div class="card__confirm-delete">
+                        <h6 class="secondary--text">Are you sure about deleting????</h6>
+                        <div>
+                            <button class="btn__delete btn">Delete</button>
+                        <button class="btn btn__create">Cancel</button>
+                        </div>
                     </div>
                 </div>
-                <div class="card">
+                <div class="card" id="dashboard-card">
                     <img src="./dist/img/image-1.jpg" alt="Card image" class="card--img">
                     <p class="primary--text">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Sit
                         cursus turpis parturient vitae diam. 
                     </p>
                     <div class="btn-types">
-                        <a href="#" class="btn btn__read">Read</a>
-                        <a href="#" class="btn btn__edit">Edit</a>
-                        <a href="#" class="btn btn__delete">Delete</a>
+                        <a href="./articles.html" class="btn btn__read">Read</a>
+                        <a href="./dashboard-edit-article.html" class="btn btn__edit">Edit</a>
+                        <button class="btn btn__delete">Delete</button>
+                    </div>
+                    <div class="card__confirm-delete">
+                        <h6 class="secondary--text">Are you sure about deleting????</h6>
+                        <div>
+                            <button class="btn__delete btn">Delete</button>
+                        <button class="btn btn__create">Cancel</button>
+                        </div>
                     </div>
                 </div>
-                <div class="card">
+                <div class="card" id="dashboard-card">
                     <img src="./dist/img/image-1.jpg" alt="Card image" class="card--img">
                     <p class="primary--text">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Sit
                         cursus turpis parturient vitae diam. 
                     </p>
                     <div class="btn-types">
-                        <a href="#" class="btn btn__read">Read</a>
-                        <a href="#" class="btn btn__edit">Edit</a>
-                        <a href="#" class="btn btn__delete">Delete</a>
+                        <a href="./articles.html" class="btn btn__read">Read</a>
+                        <a href="./dashboard-edit-article.html" class="btn btn__edit">Edit</a>
+                        <button class="btn btn__delete">Delete</button>
+                    </div>
+                    <div class="card__confirm-delete">
+                        <h6 class="secondary--text">Are you sure about deleting????</h6>
+                        <div>
+                            <button class="btn__delete btn">Delete</button>
+                        <button class="btn btn__create">Cancel</button>
+                        </div>
                     </div>
                 </div>
-                <div class="card">
+                <div class="card" id="dashboard-card">
                     <img src="./dist/img/image-1.jpg" alt="Card image" class="card--img">
                     <p class="primary--text">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Sit
                         cursus turpis parturient vitae diam. 
                     </p>
                     <div class="btn-types">
-                        <a href="#" class="btn btn__read">Read</a>
-                        <a href="#" class="btn btn__edit">Edit</a>
-                        <a href="#" class="btn btn__delete">Delete</a>
+                        <a href="./articles.html" class="btn btn__read">Read</a>
+                        <a href="./dashboard-edit-article.html" class="btn btn__edit">Edit</a>
+                        <button class="btn btn__delete">Delete</button>
+                    </div>
+                    <div class="card__confirm-delete">
+                        <h6 class="secondary--text">Are you sure about deleting????</h6>
+                        <div>
+                            <button class="btn__delete btn">Delete</button>
+                        <button class="btn btn__create">Cancel</button>
+                        </div>
                     </div>
                 </div>
-                <div class="card">
+                <div class="card" id="dashboard-card">
                     <img src="./dist/img/image-1.jpg" alt="Card image" class="card--img">
                     <p class="primary--text">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Sit
                         cursus turpis parturient vitae diam. 
                     </p>
                     <div class="btn-types">
-                        <a href="#" class="btn btn__read">Read</a>
-                        <a href="#" class="btn btn__edit">Edit</a>
-                        <a href="#" class="btn btn__delete">Delete</a>
+                        <a href="./articles.html" class="btn btn__read">Read</a>
+                        <a href="./dashboard-edit-article.html" class="btn btn__edit">Edit</a>
+                        <button class="btn btn__delete">Delete</button>
+                    </div>
+                    <div class="card__confirm-delete">
+                        <h6 class="secondary--text">Are you sure about deleting????</h6>
+                        <div>
+                            <button class="btn__delete btn">Delete</button>
+                        <button class="btn btn__create">Cancel</button>
+                        </div>
                     </div>
                 </div>
-                <div class="card">
+                <div class="card" id="dashboard-card">
                     <img src="./dist/img/image-1.jpg" alt="Card image" class="card--img">
                     <p class="primary--text">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Sit
                         cursus turpis parturient vitae diam. 
                     </p>
                     <div class="btn-types">
-                        <a href="#" class="btn btn__read">Read</a>
-                        <a href="#" class="btn btn__edit">Edit</a>
-                        <a href="#" class="btn btn__delete">Delete</a>
+                        <a href="./articles.html" class="btn btn__read">Read</a>
+                        <a href="./dashboard-edit-article.html" class="btn btn__edit">Edit</a>
+                        <button class="btn btn__delete">Delete</button>
+                    </div>
+                    <div class="card__confirm-delete">
+                        <h6 class="secondary--text">Are you sure about deleting????</h6>
+                        <div>
+                            <button class="btn__delete btn">Delete</button>
+                        <button class="btn btn__create">Cancel</button>
+                        </div>
                     </div>
                 </div>
+                
             </div>
             <div class="advanced-btns">
                 <a href="#" class="btn btn__primary">Load More articles</a>
