--- a/index.html
+++ b/index.html
@@ -732,6 +732,7 @@
     <script src="https://www.gstatic.com/firebasejs/5.6.0/firebase-app.js"></script>
     <script src="https://www.gstatic.com/firebasejs/5.6.0/firebase-auth.js"></script>
     <script src="https://www.gstatic.com/firebasejs/5.6.0/firebase-firestore.js"></script>
+    <script src="https://www.gstatic.com/firebasejs/5.6.0/firebase-storage.js"></script>
     <script src="./dist/js/firebaseConf.js"></script>
     <script src="./dist/js/authentication.js"></script>
     <script src="./dist/js/database.js"></script>
